Fix figure and references in text

--- a/introduction.html
+++ b/introduction.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Jessica Gillespie" />
 
 
-<meta name="date" content="2025-04-05" />
+<meta name="date" content="2025-04-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -224,7 +224,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>This protocol will focus on ST analysis with the three steps mentioned above. The software used at each step is one of a myriad of options and was chosen for ideal dataflow and ease of use. All are available as R packages therefore a familiarity with basic R functionality such as installing and loading R packages, handling R datatypes, and loading and saving data in R is advised.</p>
 <div id="general-workflow" class="section level2 hasAnchor" number="2.1">
 <h2><span class="header-section-number">2.1</span> General Workflow<a href="introduction.html#general-workflow" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Figure 1 shows the general workflow of this pipeline along with the software for each step. The workflow is presented linearly here although the steps after clustering may be done in any order and several are optional depending on the desired analysis.</p>
+<p>The figure below shows the general workflow of this pipeline along with the software for each step. The workflow is presented linearly here although the steps after clustering may be done in any order and several are optional depending on the desired analysis.</p>
 <p><img src="Figure_intro_1.png" alt="Diagram of protocol workflow" />
 <br>
 <br>
