--- a/materials.html
+++ b/materials.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Jessica Gillespie" />
 
 
-<meta name="date" content="2025-04-05" />
+<meta name="date" content="2025-04-07" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -227,9 +227,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li><a href="https://www.r-project.org/">R (v4.4.2)</a></li>
 <li><a href="https://posit.co/downloads/">RStudio (RStudio 2024.12.0+467 “Kousa Dogwood”)</a></li>
-<li><a href="https://satijalab.org/seurat/">Seurat5 (v5.2.0)</a></li>
-<li><a href="https://xzhoulab.github.io/SPARK/">SPARK-X6</a></li>
-<li><a href="https://github.com/jinworks/CellChat">CellChat7 (v2.1.0)</a></li>
+<li><a href="https://satijalab.org/seurat/">Seurat (v5.2.0)</a></li>
+<li><a href="https://xzhoulab.github.io/SPARK/">SPARK-X</a></li>
+<li><a href="https://github.com/jinworks/CellChat">CellChat (v2.1.0)</a></li>
 </ul>
 </div>
 <div id="collect-necessary-files" class="section level2 hasAnchor" number="3.3">
